--- a/ExhibitionCurationPlatform/ExhibitionCurationPlatform/Components/UI/ViewArtworkUI.razor
+++ b/ExhibitionCurationPlatform/ExhibitionCurationPlatform/Components/UI/ViewArtworkUI.razor
@@ -4,6 +4,6 @@
 }
 <div class="container my-4 d-flex justify-content-center">
     <div style="max-width: 1200px;">
-        <ArtworkCard Artwork="Artwork" />
+        <ArtworkDetailCard Artwork="Artwork" />
     </div>
 </div>
